apps/echo/dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echo
spec:
  host: echo
  subsets:
  - name: version-v1
    labels:
      version: v1
  - name: version-v2
    labels:
      version: v2
  # trafficPolicy:
  #   tls:
  #     mode: ISTIO_MUTUAL
